# DBT_Projects

./: README.md
airbnb_guided_project/: main.py  pyproject.toml
airbnb_guided_project/airbnb_dbt/: dbt_project.yml
dbt_dbx_guided/: main.py  pyproject.toml
dbt_dbx_guided/dbt_dbx/: .gitignore  dbt_project.yml  profiles.yml
dbt_guided_airbnb_project/: pyproject.toml
dbt_guided_airbnb_project/dbt_practice/: dbt_project.yml
faers_dbt/: .gitignore  description.txt  ingestion.py  main.py  pyproject.toml
faers_dbt/faers_duckdb_dbt/: dbt_project.yml
faers_dbt/faers_duckdb_dbt/models/: sources.yaml
faers_dbt/faers_duckdb_dbt/models/staging/: stg__demo.sql  stg__drug.sql  stg__outc.sql  stg__reac.sql
fda-animal-adverse-events/: .gitignore  main.py  pyproject.toml  sample_record.json
fda-animal-adverse-events/fda_animals_dbt/: dbt_project.yml
fda-animal-adverse-events/fda_animals_dbt/macros/: not_null_all_columns.sql
fda-animal-adverse-events/fda_animals_dbt/models/: schema.yaml  sources.yaml
fda-animal-adverse-events/fda_animals_dbt/models/gold/: dim_adverse_case.sql  dim_animals.sql  dim_drug.sql  dim_fda_animals.sql  dim_fda_drug.sql  dim_outcomes.sql  dim_reactions.sql  dim_reciever.sql  fact_adverse_event.sql  fact_drug_event.sql  fact_outcomes.sql  fact_reactions.sql
fda-animal-adverse-events/fda_animals_dbt/models/silver/: int_adverse_event.sql  int_drugs.sql  int_outcomes.sql  int_reactions.sql
fda-animal-adverse-events/fda_animals_dbt/models/staging/: stg_fda_raw_payload.sql
temp/: 1- Reading, Writing Data.ipynb
(+33 files in other folders)
