[project]
name = "faers-dbt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "databricks-sdk<0.16.0",
    "dbt-core>=1.10.13",
    "dbt-databricks>=1.5.1",
    "dbt-duckdb>=1.10.0",
    "duckdb>=1.4.1",
    "logging>=0.4.9.6",
    "polars>=1.35.1",
    "ruff>=0.14.4",
    "sqlfluff>=3.5.0",
]
