[project]
name = "fda-animal-adverse-events"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "duckdb>=1.4.2",
    "ipykernel>=6.31.0",
    "logging>=0.4.9.6",
    "pandas>=2.3.3",
    "requests>=2.32.4",
    "ruff>=0.14.5",
    "sqlfluff>=3.5.0",
]
